--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
 
             .card.rock {
                 background-color: red;
-                background-image: url('https://jowaynejosephs.github.io/Rock-Paper-Scissors/img/rock.png');
+                background-image: url('https://static.thenounproject.com/png/88666-200.png');
             }
             
             .card.paper {
                 background-color: yellow;
-                background-image: url('https://www3.bostonglobe.com//rw/Boston/2011-2020/WebGraphics/Metro/BostonGlobe.com/2018/05/rockpaperscissors/assets/paper--left.png');
+                background-image: url('https://static.thenounproject.com/png/88661-200.png');
             }
 
             .card.scissors {
                 background-color: blue;
-                background-image: url('https://jowaynejosephs.github.io/Rock-Paper-Scissors/img/scissors.png');
+                background-image: url('https://static.thenounproject.com/png/477922-200.png');
             }
 
             .skull {
